<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_dialog_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="1000dp"
    android:orientation="vertical">
    <TextView
        android:text="@string/account_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="20dp" />
    <TextView
        android:text="@string/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/account_register_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/account_register_name"
        android:layout_width="fill_parent"
        android:textSize="22.5sp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="center" />
</LinearLayout>

