...
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/person" />

        <TextView
            android:id="@+id/account_username"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:text="username_slot"
            android:textStyle="bold" />

...
            android:text="@string/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="22dip"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/account_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="name slot"
            android:padding="22dip"/>
    </LinearLayout>
    <LinearLayout
...
