...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_tag_text"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/create_new_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            app:fabSize="mini"/>
    </LinearLayout>
...
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom|end">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_tag_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="center_vertical"
            app:srcCompat="@drawable/ic_add"
            app:fabSize="normal"/>
...
