...
        android:padding="3dip"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_profile_update_name_entry"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="3dp"
            android:inputType="text"
            android:gravity="top"
            android:minLines="1"
...
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">

        <Button android:id="@+id/update_profile_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />
    </LinearLayout>

...
